--- a/scrumblebees/www/index.html
+++ b/scrumblebees/www/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates" rel="stylesheet">
@@ -46,7 +47,8 @@
   <section class="container-fluid landingPage">
     <div class="row">
       <div class="col d-flex justify-content-end">
-        <img class="bee sticky-top" src="./assets/bee.png" alt="">
+        <a class="bee sticky-top" href="https://www.youtube.com/watch?v=VONRQMx78YI"><img class="bee sticky-top"
+            src="./assets/bee.png" alt=""></a>
       </div>
     </div>
     <div class="row d-flex h-60 jusfity-content-center align-items-center">
@@ -116,7 +118,7 @@
                 placeholder="Enter image url"></input>
             </div>
           </div>
-          <button type="submit" class="btn"><img src="./assets/bee.png" id="submitButton"></img>
+          <button type="submit" class="btn btn-warning"><img src="./assets/bee.png" id="submitButton"></img>
             Submit</button>
         </form>
       </div>
