fixed side scroll

--- a/scrumblebees/www/index.html
+++ b/scrumblebees/www/index.html
@@ -65,23 +65,12 @@
         </p>
       </div>
     </div>
-    <div id="scroll">
-      <div class="row justify-content-center mt-5">
-        <div class="col-3 text-center">
-          <div id="scrollDown">
-            <a href="#posts">
-              <h3 class="viewPostHome">View Posts</h3>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-3 d-flex justify-content-center viewPostHome">
-          <a href="#posts">
-            <h3><i class="fas fa-angle-double-down text-center viewPostHome" style="color: #343a40;" id="downArrow"></i>
-            </h3>
-          </a>
-        </div>
+    <div class="row mt-5 w-100">
+      <div class="col-12">
+        <a href="#posts" class="flex-center">
+          <h3 class="scroll">View Posts</h3>
+          <h3 class="black-text scroll"><i class="fas fa-angle-double-down" style="color: black"></i></h3>
+        </a>
       </div>
     </div>
   </section>
